<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100" 
    tools:context=".LanguageSelectionActivity">

    <ImageView
        android:id="@+id/imageViewLogoLanguage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="64dp"

        android:src="@mipmap/ic_launcher"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/textViewLanguageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/title_activity_language_selection"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColor="@color/light_green"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogoLanguage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewLanguageTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonEnglish"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/language_english"
            android:backgroundTint="@color/green_500"
            app:cornerRadius="12dp"
            android:textColor="@color/white"
            android:layout_marginBottom="16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonArabic"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/language_arabic"
            android:backgroundTint="@color/white"
            app:cornerRadius="12dp"
            android:textStyle="bold"
            android:textColor="@color/green_500" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout> 